t+de:[[Körperkreislauf]] ([[WT:EDIT|Assisted]]) <systemic circulation#33320004>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -10,7 +10,7 @@
 * Azeri: {{t|az|böyük qan dövranı}}
 * Finnish: {{t|fi|suuri verenkierto}}
 {{trans-mid}}
-* German: {{t|de|großer Blutkreislauf|m}}, {{t|de|systemischer Kreislauf|m}}
+* German: {{t|de|großer Blutkreislauf|m}}, {{t|de|systemischer Kreislauf|m}}, {{t|de|Körperkreislauf|m}}
 * Turkish: {{t+|tr|büyük kan dolaşımı}}
 {{trans-bottom}}
 
