--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -8,9 +8,12 @@
 ====Translations====
 {{trans-top|part of blood circulation}}
 * Azeri: {{t|az|kiçik qan dövranı}}
+* Dutch: {{t|nl|kleine bloedsomloop|m}}
 * Finnish: {{t+|fi|pieni verenkierto}}
 {{trans-mid}}
+* German: {{t|de|kleiner Blutkreislauf|m}}, {{t|de|Lungenkreislauf|m}}
 * Latin: {{t|la|circulatio pulmonalis}}, {{t|la|circulatio minor}}
+* Swedish: {{t|sv|lilla kretsloppet|n}}, {{t|sv|lungkretsloppet|n}}
 * Turkish: {{t+|tr|küçük kan dolaşımı}}
 {{trans-bottom}}
 
