t+da:[[det systemiske kredsløb]] t+da:[[kropskredsløbet]] ([[WT:EDIT|Assisted]]) <systemic circulation#33322042>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -8,6 +8,7 @@
 ====Translations====
 {{trans-top|part of blood circulation}}
 * Azeri: {{t|az|böyük qan dövranı}}
+* Danish: {{t|da|det systemiske kredsløb|n}}, {{t|da|kropskredsløbet|n}}
 * Dutch: {{t|nl|grote bloedsomloop|m}}
 * Finnish: {{t|fi|suuri verenkierto}}
 {{trans-mid}}
