t+da:[[det lille kredsløb]] t+da:[[lungekredsløbet]] ([[WT:EDIT|Assisted]]) <pulmonary circulation#33322049>

--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -8,6 +8,7 @@
 ====Translations====
 {{trans-top|part of blood circulation}}
 * Azeri: {{t|az|kiçik qan dövranı}}
+* Danish: {{t|da|det lille kredsløb|n}}, {{t|da|lungekredsløbet|n}}
 * Dutch: {{t|nl|kleine bloedsomloop|m}}
 * Finnish: {{t+|fi|pieni verenkierto}}
 {{trans-mid}}
