--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -14,6 +14,8 @@
 * German: {{t|de|großer Blutkreislauf|m}}, {{t|de|systemischer Kreislauf|m}}, {{t|de|Körperkreislauf|m}}
 {{trans-mid}}
 * Icelandic: {{t|is|líkamsblóðrás|f}}
+* Norwegian:
+*: Bokmål: {{t|nb|store kretsløp|n}}
 * Swedish: {{t|sv|systemkretsloppet|n}}, {{t|sv|stora kretsloppet|n}}
 * Turkish: {{t+|tr|büyük kan dolaşımı}}
 {{trans-bottom}}
