--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -15,6 +15,8 @@
 {{trans-mid}}
 * Icelandic: {{t|is|lungnablóðrás|f}}
 * Latin: {{t|la|circulatio pulmonalis}}, {{t|la|circulatio minor}}
+* Norwegian:
+*: Bokmål: {{t|nb|lille kretsløp|n}}, {{t|nb|lungekretsløpet|n}}
 * Swedish: {{t|sv|lilla kretsloppet|n}}, {{t|sv|lungkretsloppet|n}}
 * Turkish: {{t+|tr|küçük kan dolaşımı}}
 {{trans-bottom}}
