t+it:[[grande circolazione]] t-balance t+it:[[circolazione sistemica]] ([[WT:EDIT|Assisted]]) <systemic circulation#33324139>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -14,6 +14,7 @@
 * German: {{t|de|großer Blutkreislauf|m}}, {{t|de|systemischer Kreislauf|m}}, {{t|de|Körperkreislauf|m}}
 {{trans-mid}}
 * Icelandic: {{t|is|líkamsblóðrás|f}}
+* Italian: {{t|it|grande circolazione|f}}, {{t|it|circolazione sistemica|f}}
 * Norwegian:
 *: Bokmål: {{t|nb|store kretsløp|n}}
 * Swedish: {{t|sv|systemkretsloppet|n}}, {{t|sv|stora kretsloppet|n}}
