--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -1,4 +1,5 @@
 ==English==
+[[File:Circulatory system SMIL.svg|thumbnail|Heart and circulatory system:<br>'''systemic circulation''' on the left side; [[pulmonary circulation]] on the right side.]]
 
 ===Noun===
 {{en-noun}}
