/* English */ <systemic circulation#33325310>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -6,6 +6,13 @@
 
 # {{context|anatomy|lang=en}} The part of blood [[circulation]] which carries oxygenated blood away from the heart, to the body, and returns deoxygenated blood back to the heart.
 
+====Related terms====
+* [[pulmonary circulation]]
+* [[arterial circulation]]
+* [[venous circulation]]
+* [[coronary circulation]]
+* [[collateral circulation]]
+
 ====Translations====
 {{trans-top|part of blood circulation}}
 * Azeri: {{t|az|böyük qan dövranı}}
@@ -23,7 +30,7 @@
 {{trans-bottom}}
 
 ====See also====
-* [[pulmonary circulation]]
+* [[circulatory system]]
 
 [[ta:systemic circulation]]
 [[zh:systemic circulation]]
