--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -15,7 +15,7 @@
 
 ====Translations====
 {{trans-top|part of blood circulation}}
-* Afrikaans: {{t|af|liggaamsomloop}}, {{t|af|groot bloedsomloop}}
+* Afrikaans: {{t|af|liggaamsomloop}}, {{t|af|groot bloedsomloop}}, {{t|af|sistemiese sirkulasie}}
 * Azeri: {{t|az|böyük qan dövranı}}
 * Danish: {{t|da|det systemiske kredsløb|n}}, {{t|da|kropskredsløbet|n}}
 * Dutch: {{t|nl|grote bloedsomloop|m}}
