--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -13,6 +13,7 @@
 
 ====Translations====
 {{trans-top|part of blood circulation}}
+* Afrikaans: {{t|af|pulmonêre sirkulasie}}
 * Azeri: {{t|az|kiçik qan dövranı}}
 * Danish: {{t|da|det lille kredsløb|n}}, {{t|da|lungekredsløbet|n}}
 * Dutch: {{t|nl|kleine bloedsomloop|m}}
