--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -33,6 +33,11 @@
 ====See also====
 * [[circulatory system]]
 * [[lymphatic system]]
+* [[nitrogen cycle]]
+* [[carbon cycle]]
+* [[oxygen cycle]]
+* [[hydrogen cycle]]
+* [[respiration]]
 
 [[ta:systemic circulation]]
 [[zh:systemic circulation]]
