--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -29,7 +29,7 @@
 * Turkish: {{t+|tr|küçük kan dolaşımı}}
 {{trans-bottom}}
 
-====See also====
+=== See also ===
 * [[circulatory system]]
 * [[lymphatic system]]
 * [[nitrogen cycle]]
