/* See also */ <systemic circulation#33329639>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -30,7 +30,7 @@
 * Turkish: {{t+|tr|büyük kan dolaşımı}}
 {{trans-bottom}}
 
-====See also====
+=== See also ===
 * [[circulatory system]]
 * [[lymphatic system]]
 * [[nitrogen cycle]]
