--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -228,6 +228,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Greek: {{t+|el|πλάσμα|n}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|teremtés}}, {{t+|hu|lény}}
+* Turkish: {{t+|tr|mahluk}}
 {{trans-bottom}}
 
 {{trans-top|that which matters; the crux}}
