--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -221,6 +221,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 {{trans-mid}}
 * German: {{t|de|Ding|n}}
 * Serbo-Croatian: {{t+|sh|onaj|alt=ona}} {{t+|sh|stvar|f}} (in this slang sense, always used with demonstrative pronoun 'ona')
+* Turkish: {{t+|tr|şey}}
 {{trans-bottom}}
 
 {{trans-top|living being or creature}}
