--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -238,7 +238,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 {{trans-mid}}
 * Finnish: {{t|fi|olennainen}} {{qualifier|adjective}}
 * German: {{t|de|Sache|f}}
-* Turkish: {{t|tr|işin aslı}}
+* Turkish: {{t|tr|işin aslı}}, {{t+|tr|olay}}
 {{trans-bottom}}
 
 {{trans-top|situation surrounding a noun's referent}}
