--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -70,17 +70,18 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * [[everything]]
 * [[here's the thing]]
 * [[nothing]]
+* [[one of those things]]
 * [[see things]]
-* [[something]]
 {{rel-mid3}}
+* [[something]]
 * [[sweet young thing]]
 * [[swing of things]]
 * [[the thing is]]
 * [[thingal]]
 * [[thingamajig]]<!-- various spellings -->
 * [[thinger]]
-* [[thinghood]]
 {{rel-mid3}}
+* [[thinghood]]
 * [[thingly]]
 * [[thingness]]
 * [[thingo]]
