--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -67,6 +67,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Czech: {{t+|cs|hůl|f}}
 * Danish: {{t|da|stav|c}}, {{t|da|stang|c}}
 * Dutch: {{t+|nl|staf|c}}
+* Erzya: {{t|myv|мандо}}
 * Esperanto: {{t|eo|bastono}}
 * Finnish: {{t+|fi|sauva}}, {{t+|fi|salko}}
 * French: {{t+|fr|bâton|m}}, {{t+|fr|canne|f}}
