/* Latin */ the two mania words need to be clarified and separated; no way Portuguese manha comes from the Greek mania <mania#33578239>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -141,7 +141,7 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 
 ==Latin==
 
-===Etymology===
+===Etymology 1===
 From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
 
 ===Pronunciation===
@@ -163,10 +163,25 @@ From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
 * Italian: {{l|it|mania}}
 {{mid2}}
 * Old Portuguese: {{l|roa-opt|manna}}
-* Portuguese: {{l|pt|mania}}, {{l|pt|manha}}
+* Portuguese: {{l|pt|mania}}
 * Romanian: {{l|ro|mânie}}
 * Spanish: {{l|es|manía}}
 {{bottom}}
+
+===Etymology 2===
+From {{m|la|manus||hand}}.
+
+====Noun====
+{{sectstub}}
+
+{{la-noun|mania|maniae|maniae|f|first}}
+
+# manual skill or ability
+
+=====Descendants=====
+* Galician {{l|gl|maña}}
+* Portuguese: {{l|pt|manha}}
+* Spanish: {{l|es|maña}}
 
 ----
 
