--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -51,7 +51,7 @@ Possibly from {{etyl|frm|en}} {{term|caper||to capture|lang=frm}}, from {{etyl|l
 * [[cop out]], [[cop-out]]
 
 ===Etymology 3===
-Short for {{term|copper (slang reference to the copper badges worn by early   lawmen)||police officer}}, itself from {{term|cop||one who cops}} above, i.e. a criminal.
+Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}} above, i.e. a criminal.
 
 ====Noun====
 {{en-noun}}
