--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -55,7 +55,7 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 
 =====Translations=====
 {{trans-top|to make a noise like a duck}}
-* Arabic:
+* Arabic: {{t|ar|زَبَطَ|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
 * Danish: {{t|da|rappe}}
 * Dutch: {{t+|nl|kwaken}}
