t+ar:[[زبط]] ([[WT:EDIT|Assisted]]) <quack#33590734>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -16,7 +16,7 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 
 =====Translations=====
 {{trans-top|sound made by a duck}}
-* Arabic: {{t|ar|بطبطة|f|tr=baṭbaṭa|sc=Arab}}
+* Arabic: {{t|ar|بطبطة|f|tr=baṭbaṭa|sc=Arab}}, {{t|ar|زبط|m|tr=zabṭ|sc=Arab}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
 * Estonian: {{t+|et|prääks}}
