--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -46,6 +46,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Slovene: {{t|sl|bolje pozno kot nikoli}}
 * Spanish: {{t+|es|más vale tarde que nunca}}, {{t|es|nunca es tarde si la dicha es buena}}
 * Swedish: {{t+|sv|bättre sent än aldrig}}
+* Turkish: {{t|tr|geç olsun da güç olmasın}}
 * Welsh: {{t|cy|gwell hwyr na hwyrach|alt=gwell rhywbryd na byth}}
 {{trans-bottom}}
 
