--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -24,9 +24,9 @@
 * Albanian: {{t|sq|qelbësi}}
 * Armenian: {{t|hy|ժանտաքիս}}
 * Basque: {{t|eu|hudo}}
-* Belarusian: {{t|be|тхор|m|tr=txor|sc=Cyrl}}
+* Belarusian: {{t|be|тхор|m|sc=Cyrl}}
 * Breton: {{t+|br|fured}}
-* Bulgarian: {{t+|bg|пор|m|tr=por|sc=Cyrl}}
+* Bulgarian: {{t+|bg|пор|m|sc=Cyrl}}
 * Catalan: {{t|ca|furó}}, {{t|ca|fura}}
 * Chinese:
 *: Mandarin: {{t+|cmn|雪貂|tr=xuědiāo|sc=Hani}}
@@ -53,7 +53,7 @@
 * Latvian: {{t|lv|okšķeris}}, {{t|lv|sesks|m}}
 * Lithuanian: {{t+|lt|šeškas|m}}
 {{trans-mid}}
-* Macedonian: {{t|mk|ласица|f|tr=lásica}} <!-- weasel ?-->
+* Macedonian: {{t|mk|ласица|f}} <!-- weasel ?-->
 * Malay: {{t|ms|feret}}
 * Maltese: {{t|mt|nemes}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
@@ -64,10 +64,10 @@
 * Quechua: {{t|qu|manqu}}
 * Romanian: {{t+|ro|nevăstuică|f}}
 * Romansch: {{t|rm|furet}}
-* Russian: {{t+|ru|хорёк|m|tr=xorjók|sc=Cyrl}}
+* Russian: {{t+|ru|хорёк|m|sc=Cyrl}}
 * Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
 * Sardinian: {{t|sc|furittu}}, {{t|sc|fughittu}}
-* Scots: [[futret]] (''Doric dilect'')
+* Scots: {{t|sco|futret}} (''Doric dilect'')
 * Scottish Gaelic: {{t|gd|neas|f}}, {{t|gd|fearaid|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|твор|m}}, {{t|sh|вретна|f}}
@@ -77,10 +77,10 @@
 * Spanish: {{t+|es|hurón|m}}
 * Swahili: {{t|sw|fereti}}
 * Swedish: {{t|sv|tamiller}}
-* Tajik: {{t|tg|хаз|tr=xaz|sc=Cyrl}}
-* Tamil: {{t|ta|மரநாய் வகை|tr=ma.ra.nai |sc=Taml}}
+* Tajik: {{t|tg|хаз|sc=Cyrl}}
+* Tamil: {{t|ta|மரநாய் வகை|sc=Taml}}
 * Turkish: {{t+|tr|yaban}}, {{t|tr|dağ gelinciği}}
-* Ukrainian: {{t|uk|тхiр|m|tr=txir|sc=Cyrl}}
+* Ukrainian: {{t|uk|тхiр|m|sc=Cyrl}}
 * Upper Sorbian: {{t+|hsb|łasyčka}}
 * Welsh: {{t|cy|ffured}}
 * West Frisian: {{t|fy|fret}}
