--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -23,7 +23,7 @@
 ====Translations====
 {{trans-top|a thousand trillion trillion, 10<sup>27</sup>}}
 * Finnish: {{t|fi|kvadriljardi}}
-* French: {{t+|fr|quatrilliard}}
+* French: {{t+|fr|quadrilliard}}
 * German: {{t+|de|Quadrilliarde}}
 * Italian: {{t+|it|quattriliardo}}
 * Japanese: {{t|ja|千秭|tr=せんし, senshi|sc=Jpan}}
