--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -1,23 +1,28 @@
 ==English==
+===Etymology===
+From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 
 ===Noun===
 {{wikipedia}}
 {{wikiquote}}
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
-# A [[philosophy]] that advocates the [[individual]] [[self]]-[[ownership]], the [[elimination]] of [[slavery]] and of the [[state]], and the [[provision]] of all socially-beneficial [[government]]al [[service]]s by self-regulating [[free market]] [[competitor]]s and [[mutual aid]] societies.
+# {{label|en|politics|economy}} A {{l/en|political}} and {{l/en|economic}} {{l/en|philosophy}} that advocates the the {{l/en|elimination}} of the {{l/en|state}} and other {{l/en|coercitive}} {{l/en|institutions}} in favour of {{l/en|individual}} {{l/en|self}}-{{l/en|ownership}} and {{l/en|free market}} 
+
+===Same-root terms===
+*{{l/en|anarcho-capitalist}}
 
 ====Translations====
 {{trans-top|philosophy that advocates the elimination of the state and a self-regulating free market}}
-* Portuguese: {{t|pt|anarco-capitalismo|m}}, {{t|pt|anarcocapitalismo|m}}
+* Portuguese: {{t|pt|anarcocapitalismo|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
 ===See also===
-* [[agorism]]
-* [[individualist anarchism]]
-* [[libertarianism]]
-* [[Rothbardian]]
-* [[voluntaryism]]
+* {{l/en|agorism}}
+* {{l/en|anarcho-individualism}}
+* {{l/en|libertarianism}}
+* {{l/en|Rothbardian}}
+* {{l/en|voluntaryism}}
 
 [[Category:English oxymorons]]
 
