t+ar:[[لاسلطوية رأسمالية]] ([[WT:EDIT|Assisted]]) <anarcho-capitalism#33622216>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -13,6 +13,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 
 ====Translations====
 {{trans-top|philosophy that advocates the elimination of the state and a self-regulating free market}}
+* Arabic: {{t|ar|لاسلطوية رأسمالية}}
 * Italian: {{t|it|anarcocapitalismo|m}}
 {{trans-mid}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
