--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -15,6 +15,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 {{trans-top|philosophy that advocates the elimination of the state and a self-regulating free market}}
 * Arabic: {{t|ar|لاسلطوية رأسمالية}}
 * Bulgarian: {{t|bg|aнархокапитализъм|sc=Cyrl}}
+* Catalan: {{t|ca|anarcocapitalisme}}
 * Italian: {{t|it|anarcocapitalismo|m}}
 {{trans-mid}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
