t+eo:[[anarki-kapitalismo]] t-balance ([[WT:EDIT|Assisted]]) <anarcho-capitalism#33622407>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -17,8 +17,9 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Bulgarian: {{t|bg|aнархокапитализъм|sc=Cyrl}}
 * Catalan: {{t|ca|anarcocapitalisme}}
 * Czech: {{t|cs|anarchokapitalismus}}
-{{trans-mid}}
 * Danish: {{t|da|anarkokapitalisme}}
+{{trans-mid}}
+* Esperanto: {{t|eo|anarki-kapitalismo}}
 * German: {{t|de|Anarchokapitalismus}}
 * Greek: {{t|el|aναρχοκαπιταλισμός}}
 * Italian: {{t|it|anarcocapitalismo|m}}
