--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -24,6 +24,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * German: {{t|de|Anarchokapitalismus}}
 * Greek: {{t|el|aναρχοκαπιταλισμός}}
 * Italian: {{t|it|anarcocapitalismo|m}}
+* Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
 {{trans-bottom}}
