--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -21,6 +21,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Esperanto: {{t|eo|anarki-kapitalismo}}
 {{trans-mid}}
 * Estonian: {{t|et|anarhokapitalism}}
+* Finnish: {{t|fi|anarkokapitalismi}}
 * German: {{t|de|Anarchokapitalismus}}
 * Greek: {{t|el|aναρχοκαπιταλισμός}}
 * Italian: {{t|it|anarcocapitalismo|m}}
