--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -26,6 +26,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * German: {{t|de|Anarchokapitalismus}}
 * Greek: {{t|el|aναρχοκαπιταλισμός}}
 * Hebrew: {{t|he|אנרכו־קפיטליזם|alt=אנרכו-קפיטליזם}}
+* Ido: {{t|io|anarkio-kapitalismo}}
 * Indonesian: {{t|id|anarko kapitalisme}}
 * Italian: {{t|it|anarcocapitalismo|m}}
 * Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
