--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -29,6 +29,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Ido: {{t|io|anarkio-kapitalismo}}
 * Indonesian: {{t|id|anarko kapitalisme}}
 * Italian: {{t|it|anarcocapitalismo|m}}
+* Japanese: {{t|ja|無政府資本主義|sc=Jpan}}
 * Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
