--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -34,6 +34,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Korean: {{t|ko|아나코 자본주의|sc=Kore}}
 * Latvian: {{t|lv|anarhokapitālisms}}
 * Lithuanian: {{t|lt|anarchokapitalizmas}}
+* Macedonian: {{t|mk|aнархокапитализам|sc=Cyrl}}
 * Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
