--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -36,6 +36,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Latvian: {{t|lv|anarhokapitālisms}}
 * Lithuanian: {{t|lt|anarchokapitalizmas}}
 * Macedonian: {{t|mk|aнархокапитализам|sc=Cyrl}}
+* Norwegian: {{t|no|anarkokapitalisme}}
 * Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
