--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -38,6 +38,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Macedonian: {{t|mk|aнархокапитализам|sc=Cyrl}}
 * Norwegian: {{t|no|anarkokapitalisme}}
 * Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
+* Polish: {{t|pl|anarchokapitalizm}}
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
 {{trans-bottom}}
