t+sh:[[anarho-kapitalizam]] ([[WT:EDIT|Assisted]]) <anarcho-capitalism#33623012>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -42,6 +42,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Portuguese: {{t|pt|anarcocapitalismo|m}}
 * Romanian: {{t|ro|anarho-capitalism}}
 * Russian: {{t|ru|aнархо-капитализм|sc=Cyrl}}
+* Serbo-Croatian: {{t|sh|anarho-kapitalizam}}
 * Slovak: {{t|sk|anarchokapitalizmus}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
 {{trans-bottom}}
