--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -46,6 +46,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 * Slovak: {{t|sk|anarchokapitalizmus}}
 * Spanish: {{t+|es|anarcocapitalismo|m}}
 * Swedish: {{t|sv|anarkokapitalism}}
+* Tamil: {{t|ta|அரசழிவு முதலாளித்துவம்|sc=Taml}}
 {{trans-bottom}}
 
 ===See also===
