--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -9,7 +9,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 {{wikipedia}}
 {{wikiquote}}
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
-# {{label|en|politics|economy}} A {{l/en|political}} and {{l/en|economic}} {{l/en|philosophy}} that advocates the the {{l/en|elimination}} of the {{l/en|state}} and other {{l/en|coercitive}} {{l/en|institutions}} in favour of {{l/en|individual}} {{l/en|self}}-{{l/en|ownership}} and {{l/en|free market}} 
+# {{label|en|politics|economics}} A {{l/en|political}} and {{l/en|economic}} {{l/en|philosophy}} that advocates the the {{l/en|elimination}} of the {{l/en|state}} and other {{l/en|coercitive}} {{l/en|institutions}} in favour of {{l/en|individual}} {{l/en|self}}-{{l/en|ownership}} and {{l/en|free market}} 
 
 ===Same-root terms===
 *{{l/en|anarcho-capitalist}}
