/* See also */ <anarcho-capitalism#33629768>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -57,7 +57,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 
 ===See also===
 * {{l/en|agorism}}
-* {{l/en|anarcho-individualism}}
+* {{l/en|individualist anarchism}}
 * {{l/en|libertarianism}}
 * {{l/en|Rothbardian}}
 * {{l/en|voluntaryism}}
