--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -11,8 +11,11 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 {{en-noun|head={{l/en|anarcho-}}{{l/en|capitalism}}|-}}
 # {{label|en|politics|economics}} A {{l/en|political}} and {{l/en|economic}} {{l/en|philosophy}} that advocates the the {{l/en|elimination}} of the {{l/en|state}} and other {{l/en|coercive}} {{l/en|institutions}} in favour of {{l/en|individual}} {{l/en|self}}-{{l/en|ownership}} and {{l/en|free market}}
 
-===Same-root terms===
+===Derived terms===
 *{{l/en|anarcho-capitalist}}
+
+===Synonyms===
+*{{l/en|anti-state capitalism}}, {{l/en|anti-state marketism}}, {{l/en|capitalist anarchism}}, {{l/en|private property anarchism}}, {{l/en|stateless capitalism}}
 
 ====Translations====
 {{trans-top|philosophy that advocates the elimination of the state and a self-regulating free market}}
