--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -486,7 +486,7 @@ From {{etyl|gem-pro|non}} {{m|gem-pro|*atǭ}}. Related to {{etyl|non|-}} {{m|ang
 # [[conflict]], [[fight]], [[battle]]
 
 =====Declension=====
-{{non-decl-noun|at|at|ati|ats|atit|atit|atinu|atsins|ǫt|ǫt|ǫtum|ata|ǫtin|ǫtin|ǫtunum|atanna}}
+{{non-decl-n-a|at|ǫt}}
 
 =====Descendants=====
 * Icelandic: {{l|is|at}}
