--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -60,7 +60,7 @@ Abbreviation of various terms and phrases.
 * Bengali: {{t|bn|সিডি|tr=siḑi|sc=Beng}}
 * Chinese:
 *: Cantonese: {{t|yue|CD|tr=si1 di1|sc=Hani}}
-*: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}
+*: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}{{t+|cmn|光盤|sc=Hani}}, {{t+|cmn|光盘|tr=guāngpán|sc=Hani}}, {{t+|cmn|光碟|tr=guāngdié|sc=Hani}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
@@ -78,6 +78,7 @@ Abbreviation of various terms and phrases.
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди|m}}
 * Swedish: {{t+|sv|CD|c}}
+* Thai: {{t|th|ซิดี|tr=sí dee}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
