--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -76,7 +76,7 @@ Abbreviation of various terms and phrases.
 * Malay: {{t|ms|CD}}
 * Persian: {{t|fa|سی‌دی|tr=sidi|sc=fa-Arab}}
 * Portuguese: {{t+|pt|CD|m}}
-* Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди|m}}
+* Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди́|m}}
 * Swedish: {{t+|sv|CD|c}}
 * Thai: {{t|th|ซิดี|tr=sí dee}}
 * Vietnamese: {{t-needed|vi}}
