--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -17,7 +17,7 @@ From {{etyl|la|an}} {{term|mundus|lang=la}}.
 
 # {{label|fi|slang}} ecstasy {{gloss|drug}}
 
-====Translations====
+====Declension====
 {{fi-decl-valo|mund|||o|a}}
 
 ====Synonyms====
