t+mn:[[ноён]] ([[WT:EDIT|Assisted]]) <sir#33665628>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -98,7 +98,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Latvian: {{t|lv|kungs|m}}
 * Lithuanian: {{t|lt|ponas|m}}
 * Macedonian: {{t|mk|го́сподин|m}}, {{t|mk|госпо́дине|m}} ([[vocative case]])
-* Mongolian: {{t-needed|mn}}
+* Mongolian: {{t+|mn|ноён|sc=Cyrl}}
 * Mwali Comorian: {{t|wlc|bwana}}
 * Ndzwani Comorian: {{t|wni|mwenye}}
 * Norwegian:
