t+yi:[[מייַנ הער]] t+id:[[tuan]] t+ms:[[tuan]] ([[WT:EDIT|Assisted]]) <sir#33665679>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -84,6 +84,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Hindi: {{t|hi|श्रीमान|m}}, {{t|hi|श्री|sc=Deva}}, {{t|hi|सर|m|sc=Deva}}, {{t|hi|साहिब|m|sc=Deva}}, {{t|hi|महोदय|m|sc=Deva}}, {{t|hi|जनाब|m|sc=Deva}}
 * Hungarian: {{t+|hu|uram}}
 * Icelandic: {{t+|is|herra|m}}
+* Indonesian: {{t+|id|tuan}}
 * Italian: {{t+|it|signore|m}}
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}, {{t|ja|だんな様|tr=danna-sama|sc=Jpan}}
 * Kazakh: {{t+|kk|мырза|sc=Cyrl}}
@@ -98,6 +99,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Latvian: {{t|lv|kungs|m}}
 * Lithuanian: {{t|lt|ponas|m}}
 * Macedonian: {{t|mk|го́сподин|m}}, {{t|mk|госпо́дине|m}} ([[vocative case]])
+* Malay: {{t|ms|tuan}}
 * Mongolian: {{t+|mn|ноён|sc=Cyrl}}
 * Mwali Comorian: {{t|wlc|bwana}}
 * Ndzwani Comorian: {{t|wni|mwenye}}
@@ -123,6 +125,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Urdu: {{t|ur|صاحب|m|tr=sāhib|sc=ur-Arab}}
 * Uzbek: {{t+|uz|janob}}
 * Vietnamese: {{t+|vi|ngài}}
+* Yiddish: {{t|yi|מייַנ הער|m}}
 {{trans-bottom}}
 
 {{checktrans-top}}
