--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -18,7 +18,7 @@
 
 ====Translations====
 {{trans-top|initialism: National Security Agency}}
-* Russian: {{t|ru|АНБ|n|tr=a-en-bɛ́}}
+* Russian: {{t|ru|АНБ|n}}
 {{trans-mid}}
 {{trans-bottom}}
 
