t+fi:[[putkikellot]] ([[WT:EDIT|Assisted]]) <tubular bells#33677563>

--- a/en/t/tubular bells.855148.wikitext
+++ b/en/t/tubular bells.855148.wikitext
@@ -11,7 +11,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|管鐘|sc=Hani}}, {{t|cmn|管钟|tr=guǎnzhōng|sc=Hani}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|putkikellot|p}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
