/* Derived terms */ <blow#33677629>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -104,6 +104,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * [[blow hot and cold]]
 * [[blowhorn]]
 * [[blow it]]
+* [[blow it out one's ass]]
 * [[blowjob]]
 * [[blow me]]
 * [[blow off]]
@@ -111,8 +112,8 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * [[blow one's horn]]
 * [[blow one's nose]]
 * [[blow one's top]]
-* [[blow one's trumpet]]
 {{rel-mid}}
+* [[blow one's trumpet]]
 * [[blow out]]
 * [[blowout]]
 * [[blow over]]
