t+fi:[[herra]] ([[WT:EDIT|Assisted]]) <sir#33681924>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -38,6 +38,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 {{trans-top| man of a higher rank or position}}
 * Bulgarian: {{t+|bg|господи́н|m|sc=Cyrl}}
 * Dutch: {{t+|nl|heer|m}}, {{t+|nl|meneer|m}}
+* Finnish: {{t+|fi|herra}}
 * Greek: {{t|el|Σέρ|m}}
 * Hungarian: {{t+|hu|úr}}
 * Latvian: {{t|lv|sers|m}}
@@ -50,6 +51,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 
 {{trans-top|address to a military superior}}
 * Dutch: {{t+|nl|meneer|m}}
+* Finnish: {{t+|fi|herra}}
 * Hebrew: {{t|he|המפקד|m|tr=hamfakéd|sc=Hebr}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|senhor|m}}
@@ -74,7 +76,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Danish: {{t+|da|herre|c}}
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
 * Estonian: {{t|et|härra}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|herra}}
 * French: {{t+|fr|monsieur|m}}
 * Friulian: {{t|fur|siôr|m}}, {{t|fur|signôr|m}}, {{t|fur|missâr|m}}
 * Georgian: {{t|ka|ბატონო}}
