--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -7,7 +7,10 @@
 # A city in the northwest of [[Baja California]], [[Mexico]], by the American border with [[San Diego]].
 
 ====Translations====
+{{trans-top|a city in Mexico}}
 * Spanish: {{t|es|Tijuana|f}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Anagrams===
 * [[Juanita#English|Juanita]]
