--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -27,6 +27,8 @@ From {{etyl|frm|en}} {{term|Jacobin|lang=fr}}, ultimately from {{etyl|la|en}} {{
 *Collins Shorter English Dictionary
 *Napoleon - a biography by Frank McLynn Pages 209-10, 212, 213, 220,221,222,224,233,
 
+[[Category:en:Pigeons]]
+
 [[et:Jacobin]]
 [[fr:Jacobin]]
 [[io:Jacobin]]
