--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -92,6 +92,8 @@ From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} 
 {{trans-bottom}}
 
 ====See also====
+* [[badger]]
+* [[ermine]]
 * [[ferret]]
 * [[fisher]]
 * [[mink]]
