--- a/en/h/hydrozoan.801199.wikitext
+++ b/en/h/hydrozoan.801199.wikitext
@@ -14,6 +14,8 @@
 * Russian: {{t+|ru|гидрозо́й|m}}
 {{trans-bottom}}
 
+[[Category:en:Cnidarians]]
+
 [[ku:hydrozoan]]
 [[ta:hydrozoan]]
 [[vi:hydrozoan]]
