--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -11,21 +11,22 @@ From {{etyl|frm|en}} {{term|Jacobin|lang=fr}}, ultimately from {{etyl|la|en}} {{
 
 # A [[Dominican]] [[friar]].
 # A member of a radical French political club founded (at an old Jacobin convent) in 1789 and one of the driving forces of the French Revolution.
-#*'''2002''', {{w|Colin Jones (historian)|Colin Jones}}, ''The Great Nation'', Penguin 2003, p. 429-30:
-#*:The '''Jacobins''' acted as a left-of-centre parliamentary pressure group, spending much of their time in coordinating the following day's business in the Assembly.
-# By extension, a political [[radical]].
+#* '''2002''', {{w|Colin Jones (historian)|Colin Jones}}, ''The Great Nation'', Penguin 2003, p. 429-30:
+#*: The '''Jacobins''' acted as a left-of-centre parliamentary pressure group, spending much of their time in coordinating the following day's business in the Assembly.
+# {{cx|by extension|lang=en}} A political [[radical]].
 # A [[breed]] of [[domestic pigeon]] (known for its feathered hood over its head).
 
 ===Adjective===
+{{en-adj|-}}
 
 # Of, or related to the [[radical]] French political club that was a driving force of the French Revolution.
-# By extension, politically [[radical]].
-#*'''2015''', Matthew Quest, "[http://www.newhistorian.com/george-l-mosse-unconventional-historian/3659/ George L. Mosse: Unconventional Historian]", [http://www.newhistorian.com New Historian]:
-#*:[...]Mosse argued the most fascist and totalitarian in particular but also radical '''Jacobin''' regimes, continued to have an investment in not merely disciplining human bodies but harnessing their sense of glory toward worshiping themselves[...].
+# {{cx|by extension|lang=en}} Politically [[radical]].
+#* '''2015''', Matthew Quest, "[http://www.newhistorian.com/george-l-mosse-unconventional-historian/3659/ George L. Mosse: Unconventional Historian]", [http://www.newhistorian.com New Historian]:
+#*: {{...}} Mosse argued the most fascist and totalitarian in particular but also radical '''Jacobin''' regimes, continued to have an investment in not merely disciplining human bodies but harnessing their sense of glory toward worshiping themselves {{...}}
 
 ===References===
-*Collins Shorter English Dictionary
-*Napoleon - a biography by Frank McLynn Pages 209-10, 212, 213, 220,221,222,224,233,
+* Collins Shorter English Dictionary
+* Napoleon - a biography by Frank McLynn Pages 209-10, 212, 213, 220,221,222,224,233,
 
 [[Category:en:Pigeons]]
 
