--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -2,7 +2,7 @@
 {{slim-wikipedia}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from {{etyl|fro|en}} {{m|fro|plege}} (Modern {{etyl|fr|-}} {{term|pleige|lang=fr}}) from {{etyl|ML.|en}} {{term|plevium|lang=la}}, {{term|plebium|lang=la}}, from {{etyl|ML.|en}} {{m|la|plebio||I pledge}}, from {{etyl|frk|en}} {{m|frk|*plegan||to pledge; to support; to guarantee}}, from Proto-Germanic {{m|gem-pro|*plegō||responsibility, habit}}, from Proto-Indo-European {{m|ine-pro|*dlegh-}}. Akin to {{etyl|goh|-}} {{term|pflegan||lang=goh|to take care of, be accustomed to}}, {{etyl|osx|-}} {{term|plegan|lang=osx||to vouch for}}, {{etyl|ang|-}} {{m|ang|plēon||to risk, endanger}}. More at {{l|en|plight}}.
+From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from {{etyl|fro|en}} {{m|fro|plege}} (Modern {{etyl|fr|-}} {{term|pleige|lang=fr}}) from {{etyl|ML.|en}} {{term|plevium|lang=la}}, {{term|plebium|lang=la}}, from {{etyl|ML.|en}} {{m|la|plebiō||I pledge}}, from {{etyl|frk|en}} {{m|frk|*plegan||to pledge; to support; to guarantee}}, from Proto-Germanic {{m|gem-pro|*plehaną||to care about, be concerned with}}. Akin to {{etyl|goh|-}} {{term|pflegan||lang=goh|to take care of, be accustomed to}}, {{etyl|osx|-}} {{term|plegan|lang=osx||to vouch for}}, {{etyl|ang|-}} {{m|ang|plēon||to risk, endanger}}. More at {{l|en|plight}}.
 
 ===Pronunciation===
 * {{IPA|/plɛdʒ/|lang=en}}
