--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -104,6 +104,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Romanian: {{t|ro|desi}}, de {{t+|ro|parca}}
 * Russian: {{t+|ru|хотя}}, {{t+|ru|хоть и}}, {{t|ru|несмотря на то, что}}
 * Slovak: {{t|sk|hoci}}
+* Slovene: {{t+|sl|čeprav}}
 * Spanish: {{t+|es|sin embargo}}, {{t|es|a pesar de}}
 * Swedish: {{t|sv|även om}}, {{t+|sv|fast}}, {{t+|sv|fastän}}
 {{trans-bottom}}
