--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -27,6 +27,9 @@
 * Spanish: {{t+|es|alóctono|m}}
 {{trans-bottom}}
 
+====Related terms====
+* [[allochthon]]
+
 ====Antonyms====
 * [[autochthonous]]
 
