--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -141,21 +141,21 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 
 ==Latin==
 
-===Etymology===
+===Etymology 1===
 From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
 
-===Pronunciation===
+====Pronunciation====
 * {{la-pronunc|mania}}
 
-===Noun===
+====Noun====
 {{la-noun|mania|maniae|maniae|f|first}}
 
 # [[craze]], {{l|en|mania}}, [[madness]]
 
-====Inflection====
+=====Inflection=====
 {{la-decl-1st|mani}}
 
-====Descendants====
+=====Descendants=====
 {{top2}}
 * Albanian: {{l|sq|mëri}}
 * English: {{l|en|mania}}
@@ -167,6 +167,18 @@ From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
 * Romanian: {{l|ro|mânie}}
 * Spanish: {{l|es|manía}}
 {{bottom}}
+
+===Etymology 2===
+
+====Pronunciation====
+* {{la-pronunc|mānia}}
+
+====Adjective====
+{{la-adj-form|mānia}}
+
+# {{inflection of|mānis||nom|n|p|lang=la}}
+# {{inflection of|mānis||acc|n|p|lang=la}}
+# {{inflection of|mānis||voc|n|p|lang=la}}
 
 ----
 
