--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -164,11 +164,17 @@ From {{etyl|la|fr}} ''[[domina]]''
 
 ==Norwegian Bokmål==
 
+===Etymology===
+From {{etyl|la|nb}} {{term|domina|lang=la}}, via {{etyl|fro|nb}} {{term|dame|lang=fro}} and late {{etyl|non|nb}} {{term|damma|lang=non}}
+
 ===Noun===
 {{nb-noun-c|dam}}
 
-# {{l|en|lady}}, {{l|en|woman}}
-# (card games) {{l|en|queen}}
+# a {{l|en|lady}}, {{l|en|woman}}
+# (''card games'') a {{l|en|queen}}
+
+===References===
+* {{R:The Bokmål Dictionary}}
 
 ----
 
