--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -23,7 +23,7 @@ From {{suffix|antinomian|ism|lang=en}}, coined by {{w|Martin Luther}}, notably u
 
 ====Translations====
 {{trans-top|a religious movement which believes that only faith is essential for salvation}}
-* Portuguese: {{t|pt|antinomianismo|m}}
+* Portuguese: {{t|pt|antinomianismo|m}}, {{t|pt|antinomismo|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
