--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -18,6 +18,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 {{trans-mid}}
 * Greek: {{t+|el|απαριθμώ}}
 * Hungarian: {{t+|hu|felsorol}}
+* Portuguese: {{t+|pt|enumerar}}
 * Russian: {{qualifier|past tense}} {{t|ru|перечисленным|tr=perečeesleneyem}}
 * Serbo-Croatian: {{t+|sh|nabrojati}}
 {{trans-bottom}}
@@ -27,6 +28,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 * French: {{t+|fr|dénombrer}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|megszámol}},  {{t+|hu|számlál}}
+* Portuguese: {{t+|pt|enumerar}}
 {{trans-bottom}}
 
 ----
