--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -20,7 +20,7 @@ From {{compound|saw|tooth|lang=en}}
 * Chinese:
 *: Mandarin: {{t|cmn|[[鋸]][[齒]]|sc=Hani}}, {{t|cmn|[[锯]][[齿]]|tr=jùchǐ|sc=Hani}}
 * French: {{t|fr|[[dent]] [[de]] [[scie]]|m}}
-* German: {{t|de|Sägezahn|m}}
+* German: {{t+|de|Sägezahn|m}}
 {{trans-mid}}
 * Italian: {{t-needed|it}}
 * Japanese: {{t|ja|[[鋸|のこぎり]][[歯]]|tr=のこぎりは, nokogiri ha|sc=Jpan}}
