--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -366,7 +366,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 ==Albanian==
 
 ===Etymology===
-From {{etyl|ine-pro|sq}} {{m|ine-pro|*band||drop}}. Compare Phrygian {{term|βεδυ||water|lang=xpg}}, Sanskrit {{m|sa|बिन्दु||drop|tr=bindú|lang=sa}}, Middle Irish {{term|banna|lang=mga}}, {{term|baina||drop|lang=mga}} and possibly Latin {{m|la|[[fons|Fōns]] [[Bandusiae]]}}.
+From {{etyl|ine-pro|sq}} {{m|ine-pro|*band||drop}}. Compare Phrygian {{term|βεδυ||water|lang=xpg}}, Sanskrit {{m|sa|बिन्दु||drop|tr=bindú}}, Middle Irish {{term|banna|lang=mga}}, {{term|baina||drop|lang=mga}} and possibly Latin {{m|la|[[fons|Fōns]] [[Bandusiae]]}}.
 
 ===Noun===
 {{sq-noun|g=m}}
