--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -74,8 +74,9 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Georgian: {{t-needed|ka}}
 * German: {{t|de|riskant}} {{t+|de|spielen}}, {{t|de|spekulieren}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Greek: {{t+|el|στοιχηματίζω}}
-{{trans-mid}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
+{{trans-mid}}
+* Indonesian: {{t+|id|bertaruh}}, {{t+|id|mempertaruhkan}}
 * Italian: {{t|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
 * Macedonian: {{t|mk|се коцка|tr=se kócka}}
@@ -95,6 +96,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Finnish: {{t|fi|uhkapelata}}
 * German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
+* Indonesian: {{t+|id|berjudi}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
 {{trans-mid}}
 * Khmer: {{t-needed|km}}
