--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -550,6 +550,9 @@ From {{etyl|gem-pro|non}} {{m|gem-pro|*at||at, to}}. Cognate with {{etyl|ang|-}}
 ===Etymology===
 From {{etyl|azc-nah-pro|ppl}} {{m|azc-nah-pro|*ātla}}, from {{etyl|azc-pro|ppl}} {{m|azc-pro|*paha}}. Cognate to Nahuatl ''[[atl]]''.
 
+===Pronunciation===
+* {{IPA|/aːt/|lang=ppl}}
+
 ===Noun===
 {{head|ppl|noun}}
 
