--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -115,6 +115,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Spanish: {{t+|es|nutria|f}}, {{t|es|lutria|f}}
 * Swedish: {{t+|sv|utter|c}}
 * Tagal Murut: {{t|mvv|tilung}}
+* Telugu: {{t+|te|ఉద్రము}}
 * Turkish: {{t+|tr|susamuru}}, {{t+|tr|lutr}}
 * Ukrainian: {{t|uk|видра|f|tr=výdra}}
 * Urdu: {{t|ur|اودبلاؤ|tr=ūd-bilā'o|sc=ur-Arab|m}}
