--- a/en/s/see stars.776097.wikitext
+++ b/en/s/see stars.776097.wikitext
@@ -22,6 +22,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|vedere le stelle}}
 * Portuguese: {{t+|pt|ver estrelas}}
+* Spanish: {{t+|es|ver estrellas}}
 * Romanian: {{t+|ro|vedea stele verzi}}
 * Walloon: {{t+|wa|vey des stoeles e plin djoû}}
 {{trans-bottom}}
