--- a/en/v/Valpolicella.745851.wikitext
+++ b/en/v/Valpolicella.745851.wikitext
@@ -1,3 +1,12 @@
+==English==
+
+===Noun===
+{{en-noun}}
+
+# A dry [[red wine]] made in the region of [[Verona]], [[Italy]], from various local grape varieties and consequently of variable quality.
+
+----
+
 ==Italian==
 
 ===Noun===
