--- a/en/l/lunger.774569.wikitext
+++ b/en/l/lunger.774569.wikitext
@@ -24,7 +24,7 @@
 
 =====Translations=====
 {{trans-top|lung disease- or TB-sufferer}}
-* Russian: {{t|ru|лёгочный больной|n|tr=лëгoчнyй бoлʹнoй}}, {{t+|ru|туберкулёзник|m|tr=tuberkuljoznik}}, {{t|ru|чахоточный|m|tr=čyaxotočnyi}}
+* Russian: {{t|ru|[[лёгочный]] [[больно́й]]|m}}, {{t+|ru|туберкулёзник|m}}, {{t|ru|чахо́точный|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
