t+el:[[βρωμιάρης]] ([[WT:EDIT|Assisted]]) <pig#33803022>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -375,7 +375,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Finnish: {{t+|fi|sika}}, {{t+|fi|sottapytty}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * German: {{t|de|Dreckschwein|n}}, {{t|de|Dreckspatz|m}}, {{t|de|Ferkel|n}}, {{t|de|Saubartel|m}} (regional), {{t|de|Schmierfink|m}}, {{t|de|Schmutzfink|m}}, {{t+|de|Schwein|n}}, {{t|de|Schweinigel|m}}, {{t|de|Wutz|m}} (regional)
-* Greek: {{t+|el|γουρούνι|n}}
+* Greek: {{t+|el|γουρούνι|n}}, {{t|el|βρωμιάρης|m}}
 * Indonesian: {{t+|id|babi}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
 * Latvian: {{t+|lv|cūka|f}}
