--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -3,6 +3,7 @@
 [[File:Grand_Canyon_Horse_Shoe_Bend_MC.jpg|thumb|A bend in a river]]
 
 ===Etymology===
+{{PIE root|en|bʰendʰ}}
 From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|bendan||to bind or bend (a bow), fetter, restrain|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bandijaną||to bend}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰendʰ-||to bind, tie}}. Cognate with {{etyl|gmh|-}} {{term|benden||to fetter|lang=gmh}}, {{etyl|da|-}} {{term|bænde||to bend|lang=da}}, {{etyl|no|-}} {{term|bende||to bend|lang=no}}, {{etyl|fo|-}} {{term|benda||to bend, inflect|lang=fo}}, {{etyl|is|-}} {{term|benda||to bend|lang=is}}. More at {{l|en|band}}.
 
 ===Pronunciation===
@@ -392,6 +393,7 @@ From {{etyl|ine-pro|sq}} {{m|ine-pro|*band||drop}}. Compare Phrygian {{term|βε
 ==Serbo-Croatian==
 
 ===Etymology===
+{{PIE root|sh|bʰendʰ}}
 From {{etyl|en|sh}} {{term|band|lang=en}}.
 
 ===Pronunciation===
