--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -7,6 +7,7 @@
 * {{rhymes|aɪnd|lang=en}}
 
 ===Etymology===
+{{PIE root|en|bʰendʰ}}
 From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bindaną}} (compare West Frisian {{m|fy|bine}}, Dutch {{m|nl|binden}}, Low German {{m|nds|binnen}}, German {{m|de|binden}}, Danish {{m|da|binde}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰendʰ-||to tie}} (compare Welsh {{m|cy|benn||cart}}, Latin {{m|la|offendīx||knot, band}}, Lithuanian {{m|lt|beñdras||partner}}, Albanian {{m|sq|bend||servant, henchman}}, {{m|sq|bind||to convince, persuade, tame}}, Ancient Greek {{m|grc|πεῖσμα||cable, rope}}, Sanskrit {{m|sa|बध्नाति}}).
 
 ===Verb===
@@ -247,6 +248,7 @@ From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-
 * {{rhymes|ɪn|lang=no}}
 
 ===Etymology 1===
+{{PIE root|nb|bʰendʰ}}
 From the verb {{term|binde|lang=nb}}
 
 ====Noun====
@@ -274,6 +276,7 @@ From the verb {{term|binde|lang=nb}}
 ==Norwegian Nynorsk==
 
 ===Etymology===
+{{PIE root|nn|bʰendʰ}}
 From the verb {{term|binde|lang=nn}}
 
 ===Noun===
