--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -15,7 +15,7 @@ From {{etyl|frm|en}} {{term|pole||hen|lang=frm}} + {{term|cat|lang=en}}. So name
 # {{context|US|dialect|lang=en}} A [[skunk]].
 
 ====Quotations====
-* '''1919,''' [[w:Ronald Firbank|Ronald Firbank]], ''[[w:Valmouth|Valmouth]]'', Duckworth, hardback edition, page 61
+* '''1919,''' {{w|Ronald Firbank}}, ''{{w|Valmouth}}'', Duckworth, hardback edition, page 61
 *: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergoda itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 
 ====Derived terms====
