--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -8,6 +8,7 @@
 * {{rhymes|ɪd|lang=en}}
 
 ===Etymology 1===
+{{PIE root|en|gʷʰedʰ}}
 From {{etyl|enm|en}} {{term|bidden|lang=enm}}, from the {{etyl|ang|en}} verb {{term|biddan||ask, demand|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bidjaną||to ask}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷʰedʰ-}}. Conflated with the {{etyl|ang|en}} verb {{m|ang|bēodan||offer, announce}} (see Etymology 2 below). Compare West Frisian {{term|bidde|lang=fy}}, Low German {{term|bidden|lang=nds}}, Dutch {{term|bidden|lang=nl}}, German {{term|bitten|lang=de}}, Danish {{term|bede|lang=da}}.
 
 ====Verb====
@@ -211,6 +212,7 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 ==Danish==
 
 ===Etymology 1===
+{{PIE root|da|bʰeyd}}
 From {{etyl|non|da}} {{term|bit|lang=non}}.
 
 ====Pronunciation====
@@ -225,7 +227,7 @@ From {{etyl|non|da}} {{term|bit|lang=non}}.
 {{da-noun-infl|et|bid|biddene|||bids|biddenes|stem=bidd}}
 
 ===Etymology 2===
-
+{{PIE root|da|bʰeyd}}
 From {{etyl|gml|da}} {{term|bīt|lang=gml}}, replacing a two-syllable form {{term|biti|lang=non}}.
 
 ====Pronunciation====
