--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm|en}} {{term|blo|lang=enm}}, {{term|bloo|lang=enm}}, from {{etyl|
 # {{context|now|_|chiefly|_|dialectal|Northern England|lang=en}} [[blue|Blue]].
 
 ===Etymology 2===
-{{PIE root|en|bʰleh₁}}
+{{PIE root|en|bʰleh₁|id=blow}}
 From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blāwan||to blow, breathe, inflate, sound}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blēaną||to blow}} (compare German {{term|blähen|lang=de}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{etyl|la|-}} {{term|flare||to blow|lang=la}}, {{etyl|xcl|-}} {{term|բեղուն||fertile|lang=xcl}}, {{etyl|sq|-}} {{term|plas||to blow, explode|lang=sq}}).
 
 ====Verb====
