Reverted edits by [[Special:Contributions/71.210.234.212|71.210.234.212]]. If you think this rollback is in error, please leave a message on my talk page. <again#33814378>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -1,4 +1,4 @@
-==Mexican==
+==English==
 {{wikipedia}}
 
 ===Alternative forms===
@@ -238,7 +238,7 @@ The pronunciation /əˈɡeɪn/ is chiefly poetic.
 [[Category:1000 English basic words]]
 ----
 
-==AmericanEnglish==
+==Scots==
 
 ===Alternative forms===
 * [[agin]]
