--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -6,7 +6,7 @@
 # {{present participle of|rat|lang=en|nocat=1}} 
 #: ''Don't go '''ratting''' to the police about what happened.''
 
-#<li value="2"> '''RATting''' [//en.wikipedia.org/wiki/Remote_Access_Trojan Remote Access Trojan]'ing
+#'''RATting''' [//en.wikipedia.org/wiki/Remote_Access_Trojan Remote Access Trojan]'ing
 #: Gaining Access to another computer, Remotely, via a Trojan 'virus' application or  malicious code snippet that can even be embedded in an image's bits. See article at [//en.wikipedia.org/wiki/Microsoft_TechNet Microsoft TechNet]: [http://technet.microsoft.com/en-us/library/dd632947.aspx "Danger: Remote Access Trojans"]
 
 ===Noun===
