--- a/en/p/prank call.776672.wikitext
+++ b/en/p/prank call.776672.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 {{trans-top|practical joke made using the telephone}}
+* Arabic: {{t|ar|اِتِّصَال مَقْلَب|m}}
 * Japanese: {{t|ja|悪戯電話|tr=いたずらでんわ, itazura denwa}}
 * Portuguese: {{t+|pt|trote|m}}
 {{trans-mid}}
