--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -97,6 +97,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Old Frisian: {{t|ofs|binda}}
 * Old Norse: {{t|non|binda}}
 * Old Saxon: {{t|osx|bindan}}
+* Portuguese: {{t+|pt|amarrar}}
 * Russian: {{t+|ru|свя́зывать|impf}}, {{t+|ru|свя́зать|pf}}
 * Saterland Frisian: {{t|stq|biende}}
 * Swedish: {{t+|sv|binda}}
