--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -49,6 +49,7 @@ From {{term|bend|lang=en}}.
 * German: {{t|de|gebeugt}}
 * Hungarian: {{t|hu|hajlott}}, {{t+|hu|görbe}}
 * Indonesian: {{t+|id|bengkok}}
+* Korean: {{t|ko|굽은|sc=Kore}}
 * Kyrgyz: {{t+|ky|шык}}, {{t+|ky|шыктуулук}}, {{t|ky|адат}}, {{t|ky|өнөкөт}}, {{t+|ky|ынта}}, {{t+|ky|кунт}}, {{t+|ky|умтулуу}}, {{t+|ky|тырышуу}}, {{t+|ky|ийри-буйру}}, {{t+|ky|бурулуш}}, {{t+|ky|кайрылыш}}, {{t|ky|ийретүү}}, {{t|ky|ийрейүү}}, {{t+|ky|кыйшайуу}}, {{t+|ky|эңкейиш}}, {{t+|ky|бүкчүйгөн}}, {{t+|ky|бүкчүйгөн}}, {{t+|ky|жантайма}}, {{t+|ky|кыйшык}}, {{t+|ky|ийилген}}, {{t+|ky|умтулган}}, {{t+|ky|тилек}}, {{t+|ky|ынтызарлык}}, {{t+|ky|куштарлык}}, {{t+|ky|чабынды}}, {{t+|ky|шалбаа}}, {{t+|ky|талаа}}, {{t+|ky|муундуу}}, {{t+|ky|муунактуу}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|torto}}
