--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -10,7 +10,7 @@
 * {{rhymes|ædʒə(ɹ)|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||badge}}, from {{etyl|xno|en}} {{m|fro|bage||emblem}}, referring to the animal's badge-like white blaze.
+From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||badge}}, referring to the animal's badge-like white blaze, equivalent to {{suffix|badge|ard|lang=en}}.
 
 ====Noun====
 [[Image:Meles meles MHNT.jpg|thumb|A badger]]
