<in the know#33893877>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -16,7 +16,7 @@
 
 ====Translations====
 {{trans-top|informed, aware}}
-* Arabic: {{|ar|على علم}}
+* Arabic: {{t|ar|على علم}}
 * Armenian: {{t|hy|տեղյակ|sc=Armn}}, {{t|hy|բիթի|sc=Armn}}
 * Bulgarian: {{t-needed|bg}}
 * Catalan: {{t-needed|ca}}
