t+la:[[audio]] ([[WT:EDIT|Assisted]]) <attend#33894880>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -81,7 +81,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 * Greek: {{t+|el|φροντίζω|sc=Grek}}, {{t+|el|μεριμνώ|sc=Grek}}
 {{trans-mid}}
-* Latin: {{t|la|attendō}}
+* Latin: {{t|la|attendō}}, {{t+|la|audio}}
 * Lojban: {{t|jbo|jundi}}
 * Portuguese: {{t|pt|cuidar de}}
 * Scottish Gaelic: {{t|gd|sgeadaich}}
@@ -106,6 +106,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}}, {{t|ja|立ち会う|tr=たちあう, tachiau}}
 * Korean: {{t+|ko|출석하다|sc=Kore}}
+* Latin: {{t+|la|audio}}
 * Polish: {{t+|pl|uczęszczać}}, {{t+|pl|brać udział}}
 * Portuguese: {{t+|pt|assistir}}, {{t|pt|[[participar]] [[de]]}}, {{t|pt|[[estar]] [[presente]] [[em]]}}
 * Russian: {{t+|ru|посеща́ть|impf}}, {{t+|ru|прису́тствовать|impf}}
