t+nl:[[schuinbalk]] t+sv:[[balk]] ([[WT:EDIT|Assisted]]) <bend#33906102>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -312,6 +312,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 {{trans-bottom}}
 
 {{trans-top|heraldic term}}
+* Dutch: {{t|nl|schuinbalk|m}}
 * Finnish: {{t+|fi|palkki}}
 * French: {{t+|fr|bande|f}}
 * German: {{t+|de|Schrägbalken|m}}
@@ -320,6 +321,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 {{trans-mid}}
 * Spanish: {{t+|es|banda|f}}
 * Swahili: {{t+|sw|pinda}}
+* Swedish: {{t+|sv|balk|c}}
 {{trans-bottom}}
 
 {{trans-top|turn; purpose; inclination; ends}}
