t+ga:[[freastail]] ([[WT:EDIT|Assisted]]) <attend#33925509>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -103,6 +103,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
+* Irish: {{t|ga|freastail}}
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}}, {{t|ja|立ち会う|tr=たちあう, tachiau}}
 * Korean: {{t+|ko|출석하다|sc=Kore}}
