--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -52,6 +52,7 @@ Abbreviation of various terms and phrases.
 # [[corporate design|Corporate design]]: specific design features of a company, corporate identity [[CI]]. {{rfc-sense}}
 # [[collision detection|Collision detection]] {{qualifier|used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen}}.
 # [[circular dichroism|Circular dichroism]].
+# [[chart datum]]
 
 ====Translations====
 {{trans-top-also|abbreviations of compact-disc which are actually in use|compact disc}}
