t+he:[[הרי]] ([[WT:EDIT|Assisted]]) <behold#34012688>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -31,7 +31,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Arabic: {{t|ar|هُوَذَا|m}}
 * Aramaic:
 *: Syriac: {{t|arc|ܗܐ|tr=hā, ho|sc=Syrc}}
-*: Hebrew: {{t|arc|הא|tr=hā, ho|sc=Hebr}}
+*: Hebrew: {{t|arc|הא|tr=hā, ho|sc=Hebr}}, {{t|he|הֲרֵי|tr=haréi}}
 * Bulgarian: {{t+|bg|гледам}}, {{t+|bg|виждам}}
 * Catalan: {{t|ca|mirar}}, {{t|ca|vigilar}}
 * Dutch: {{t+|nl|aanschouwen}}
