/* Translations */ we really have to fix this bug <behold#34012919>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -31,7 +31,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Arabic: {{t|ar|هُوَذَا|m}}
 * Aramaic:
 *: Syriac: {{t|arc|ܗܐ|tr=hā, ho|sc=Syrc}}
-*: Hebrew: {{t|arc|הא|tr=hā, ho|sc=Hebr}}, {{t|he|הֲרֵי|tr=haréi}}
+*: Hebrew: {{t|arc|הא|tr=hā, ho|sc=Hebr}}
 * Bulgarian: {{t+|bg|гледам}}, {{t+|bg|виждам}}
 * Catalan: {{t|ca|mirar}}, {{t|ca|vigilar}}
 * Dutch: {{t+|nl|aanschouwen}}
@@ -39,7 +39,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Finnish: {{qualifier|1}} {{t|fi|katsoa}}
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}
 * German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}, {{t+|de|anschauen}}, {{t+|de|ansehen}}
-* Hebrew: {{t+|he|הִנֵּה|tr=hiné|sc=Hebr}}
+* Hebrew: {{t+|he|הִנֵּה|tr=hiné|sc=Hebr}}, {{t|he|הֲרֵי|tr=haréi}}
 * Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t+|hu|megpillant}}
 * Icelandic: {{t+|is|sjá}}
 {{trans-mid}}
