--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -549,7 +549,7 @@ From {{etyl|gem-pro|non}} {{m|gem-pro|*at||at, to}}. Cognate with {{etyl|ang|-}}
 ==Pipil==
 
 ===Etymology===
-From {{etyl|azc-nah-pro|ppl}} {{m|azc-nah-pro|*ātla}}, from {{etyl|azc-pro|ppl}} {{m|azc-pro|*paha}}. Cognate to Nahuatl ''[[atl]]''.
+From {{etyl|azc-nah-pro|ppl}} {{m|azc-nah-pro|*ātla}}, from {{etyl|azc-pro|ppl}} {{m|azc-pro|*paha}}. Cognate to {{etyl|nci|-}} {{term|lang=nci|ātl||water}}.
 
 ===Pronunciation===
 * {{IPA|/aːt/|lang=ppl}}
