--- a/en/f/fingerpost.720314.wikitext
+++ b/en/f/fingerpost.720314.wikitext
@@ -11,7 +11,7 @@
 {{en-noun}}
 
 # A [[board]] that shows the direction (and often distance) to a named place; especially one of several attached to a [[milepost]]
-# The milepost itself
+# The milepost itself.
 
 ===See also===
 * [[guidepost]]
@@ -20,6 +20,17 @@
 
 ===External links===
 * {{pedialite}}
+
+====Translations====
+{{trans-top|board that shows the direction to a named place}}
+* Chinese: 
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Russian: {{t-needed|ru}}
+{{trans-bottom}}
+
+{{trans-see|the milepost itself|milepost}}
 
 [[et:fingerpost]]
 [[io:fingerpost]]
