--- a/en/f/fingerpost.720314.wikitext
+++ b/en/f/fingerpost.720314.wikitext
@@ -26,7 +26,7 @@
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|tienviitta}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
