--- a/en/m/milepost.720313.wikitext
+++ b/en/m/milepost.720313.wikitext
@@ -6,6 +6,12 @@
 # A [[post]] on a highway, often with one or more [[fingerpost]]s, showing the distance in [[mile]]s to nearby places
 # {{context|rail transport|lang=en}} A sign or post beside a railway marking the distance from the (actual or nominal) start of a line (usually the principal terminus or junction with a more major line)
 
+====Translations====
+{{trans-top|post on a highway}}
+* Finnish: {{t|fi|kilometripylväs}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Verb===
 {{en-verb}}
 
