--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -56,6 +56,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 {{trans-bottom}}
 
 {{trans-top|calculation}}
+* Armenian: {{t|hy|մուլտիպլիկացիոնիզմ}}
 * Dutch: {{t+|nl|vermenigvuldiging|f}}
 * Esperanto: {{t|eo|multipliko}}
 * French: {{t+|fr|multiplication|f}}
