--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -162,7 +162,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 
 {{trans-top|arithmetic: calculation involving this process}}
 * Afrikaans: {{t|af|deel}}
-* Armenian: {{t+|hy|բաժանում}}
+* Armenian: {{t+|hy|բաժանում}} , {{t|hy|դիվիզիոնիզմ}}
 * Bulgarian: {{t+|bg|деление|n}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|staartdeling|f}}
