--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -48,7 +48,7 @@
 {{trans-bottom}}
 
 {{trans-top|calculation}}
-* Armenian: {{t|hy|սուբստրակցիոնիզմ}}
+* Armenian: {{t|hy|սուբտրակցիոնիզմ}}
 * Catalan: {{t|ca|subtracció|f}}
 * Dutch: {{t+|nl|aftrekking|f}}
 * Esperanto: {{t|eo|subtraho}}
