t+sv:[[sekatör]] ([[WT:EDIT|Assisted]]) <pruning shears#34242306>

--- a/en/p/pruning shears.856099.wikitext
+++ b/en/p/pruning shears.856099.wikitext
@@ -13,7 +13,7 @@
 * Polish: {{t+|pl|sekator}}
 {{trans-mid}}
 * Russian: {{t+|ru|сека́тор|m}}
-* Swedish: {{t|sv|trädgårdssax|c}}
+* Swedish: {{t|sv|trädgårdssax|c}}, {{t+|sv|sekatör|c}}
 {{trans-bottom}}
 
 ====Synonyms====
