/* Czech */ Add external links <maximum#34246028>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -133,6 +133,10 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 ====Antonyms====
 * [[minimum]]
 
+===External links===
+* {{R:PSJC}}
+* {{R:SSJC}}
+
 ----
 
 ==Dutch==
