/* Translations */ we don't say cezire, never <island#34250251>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -258,7 +258,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Tok Pisin: {{t|tpi|ailan}}
 * Tongan: {{t|to|motu}}
 * Tuamotuan: {{t|pmt|motu}}
-* Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}, {{t+|tr|cezire}}
+* Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}
 * Turkmen: {{t+|tk|ada}}
 * Tuvan: {{t|tyv|ортулук}}
 * Ukrainian: {{t+|uk|о́стрів|m}}
