/* Norwegian Bokmål */ <bind#34253301>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -245,8 +245,8 @@ From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-
 ==Norwegian Bokmål==
 
 ===Pronunciation===
-* {{IPA|/bɪn/|lang=no}}
-* {{rhymes|ɪn|lang=no}}
+* {{IPA|/bɪn/|lang=nb}}
+* {{rhymes|ɪn|lang=nb}}
 
 ===Etymology 1===
 {{PIE root|nb|bʰendʰ}}
