--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -24,7 +24,7 @@
 * Volapük: {{qualifier|epicene}} {{t+|vo|metalavan}}, {{qualifier|male}} {{t|vo|himetalavan}}, {{qualifier|female}} {{t|vo|jimetalavan}}, {{qualifier|collective, epicene}} {{t|vo|metalavanef}}
 {{trans-bottom}}
 
-[[Category:en:Occupations]]
+{{catlangcode|en|Occupations|Metallurgy}}
 
 [[es:metallurgist]]
 [[ko:metallurgist]]
