--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -32,6 +32,7 @@ From {{etyl|xno|en}} {{term|genette|lang=fro}}, {{etyl|frm|en}} {{term|genette|l
 * German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
 * Italian: {{t|it|genetta|f}}
 * Navajo: {{t|nv|dlǫ́ʼiitsoh áłtsʼózígíí}}
+* Portuguese: {{t+|pt|gineta|f}}
 * Romanian: {{t|ro|genetă|f}}, {{t|ro|ginetă|f}}
 * Russian: {{t+|ru|гене́тта|f}}, {{t|ru|гене́та|f}}
 * Spanish: {{t+|es|jineta|f}}, {{t|es|gineta|f}}
@@ -51,6 +52,7 @@ Coined in the 20th century from {{term|gene}}.
 * French: {{t|fr|ramet}}
 {{trans-mid}}
 * Italian: {{t|it|genet|m}}
+* Portuguese: {{t+|pt|geneta|m}}, {{t+|pt|genet|m}}
 {{trans-bottom}}
 
 ===Etymology 3===
