--- a/en/c/Common Lisp.775079.wikitext
+++ b/en/c/Common Lisp.775079.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Proper noun===
-{{en-proper noun}}
+{{en-proper noun|head=[[common|Common]] [[Lisp]]}}
 
 # {{context|computing|lang=en}} A [[multiparadigm]], general-purpose [[programming language]].
 
