--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -193,7 +193,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 ==Serbo-Croatian==
 
 ===Etymology===
-From {{etyl|sla-pro|sh}} {{m|sla-pro|*syrъ}}.
+From {{etyl|sla-pro|sh}} {{m|sla-pro|*syrъ}}, derivd from "sour milk"
 
 ===Pronunciation===
 * {{IPA|/sîr/|lang=sh}}
