--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -57,15 +57,16 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{
 * Georgian: {{t|ka|ბოსფორი}}
 * German: {{t+|de|Bosporus|m}}
 * Greek: {{t+|el|Βόσπορος|m}}
+*: Ancient: {{t|grc|Βόσπορος|m}}
 * Hebrew: {{t|he|בּוֹסְפּוֹרוּס|m|tr=bosporus}}
 * Hindi: {{t|hi|बोस्पोरुस जलसन्धि|tr=bosporus jalsandhi}}
 * Hungarian: {{t+|hu|Boszporusz}}
 * Icelandic: {{t|is|Bosporussund}}
 * Indonesian: {{t|id|Selat Bosporus}}
 * Italian: {{t|it|Bosforo|m}}
+{{trans-mid}}
 * Japanese: {{t|ja|ボスフォラス海峡|tr=Bosuporasu kaikyō}}
 * Javanese: {{t|jv|Selat Bosporus}}
-{{trans-mid}}
 * Karakalpak: {{t|kaa|Bosfor}}
 * Korean: {{t|ko|보스포루스 해협|tr=Boseuporuseu haehyeop}}
 * Kurdish: {{t|ku|Tengava Stenbolê}}, {{t|ku|Bosfor}}
