--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -104,6 +104,17 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{
 * Western Panjabi: {{t|pnb|باسفورس}}
 {{trans-bottom}}
 
+----
+
+==Latin==
+===Proper noun===
+{{la-proper noun|Bosphorus|Bosphori|Bosphorī|m|second}}
+
+# {{alt form|Bosporus|lang=la}}
+
+====Declension====
+{{la-decl-2nd|num=sg|Bosphor}}
+
 [[cs:Bosphorus]]
 [[et:Bosphorus]]
 [[el:Bosphorus]]
