--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -5,7 +5,7 @@
 
 # {{context|obsolete|lang=en}} [[platinum]]
 # A precious metal [[alloy]] consisting of gold and a platinum group metal such as [[platinum]] or [[palladium]] or other [[white metal]] such as [[nickel]].
-# {{context|slang}} [[cocaine|Cocaine]].
+# {{lb|en|slang}} [[cocaine|Cocaine]].
 #*'''1989''', Gabriel G. Nahas, ‎Helene Peters, ''Cocaine: The Great White Plague'', page 122:
 #*: Fleets of planes flew in their daily cargo of '''white gold''', first extracted from coca leaves in Peru or Bolivia and then refined in Colombia.
 
@@ -14,7 +14,7 @@
 
 ====Translations====
 {{trans-top|A precious metal alloy consisting of gold and a platinum group metal}}
-* Bulgarian: {{t|bg|бяло злато|n|sc=Cyrl}}
+* Bulgarian: {{t|bg|бяло злато|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|白金|tr=báijīn|sc=Hani}}, {{t|cmn|白色黃金|sc=Hani}}, {{t|cmn|白色黄金|tr=báisè huángjīn|sc=Hani}}, {{t|cmn|白色K金|tr=báisè kei jīn|sc=Hani}}
 * Finnish: {{t|fi|valkokulta}}
