--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -21,12 +21,29 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 * Greek:
 *: Ancient: {{t|grc|Ἰωνία|f|sc=polytonic}}
 {{trans-mid}}
+* Latin: {{t|la|Iōnia|f}}
 * Old Persian: {{t|peo|𐎹𐎢𐎴|tr=Yauna|sc=Xpeo}}
 {{trans-bottom}}
 
 [[Category:en:Cities]]
 [[Category:en:Iowa]]
 [[Category:en:Michigan]]
+
+----
+
+==Latin==
+===Etymology===
+From {{etyl|grc|la}} {{m|grc|Ἰωνία}}.
+===Proper noun===
+{{la-proper noun|Iōnia||Iōniae|f|first}}
+
+# {{l|en|Ionia}} {{gloss|region in Asia Minor}}
+
+====Declension====
+{{la-decl-1st|num=sg|Iōni}}
+
+[[Category:la:Place names]]
+
 
 [[et:Ionia]]
 [[fr:Ionia]]
