t+ca:[[assistir]] ([[WT:EDIT|Assisted]]) <attend#34287303>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -92,6 +92,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 {{trans-top|to be present at}}
 * Arabic: {{t|ar|حَضَرَ}}
 * Bulgarian: {{t|bg|присъствам}}, {{t+|bg|посещавам}}
+* Catalan: {{t+|ca|assistir}}
 * Chinese:
 *: Mandarin: {{t+|cmn|出席|tr=chūxí|sc=Hani}}
 * Czech: {{t|cs|zúčastnit se}}, {{t+|cs|účastnit se}}
