--- a/en/p/prosodic.855423.wikitext
+++ b/en/p/prosodic.855423.wikitext
@@ -9,7 +9,7 @@
 {{trans-top|prosody}}
 * French: {{t|fr|prosodique}}
 * German: {{t+|de|prosodisch}}
-* Greek, Modern: {{t|gr|προσωδιακός}}
+* Greek, Modern: {{t|el|προσωδιακός}}
 * Latin: {{t|la|prosodiacus}}, {{t-check|la|prosodicus}}
 {{trans-mid}}
 * Serbo-Croatian:
