--- a/en/p/prosodic.855423.wikitext
+++ b/en/p/prosodic.855423.wikitext
@@ -5,11 +5,15 @@
 
 # Of, or relating to, [[prosody]].
 
+====Synonyms====
+* [[prosodical]]
+
 ====Translations====
 {{trans-top|prosody}}
 * French: {{t|fr|prosodique}}
 * German: {{t+|de|prosodisch}}
 * Greek, Modern: {{t|el|προσωδιακός}}
+* Italian: {{l|it|prosodico}}
 * Latin: {{t|la|prosodiacus}}, {{t-check|la|prosodicus}}
 {{trans-mid}}
 * Serbo-Croatian:
