/* Derived terms */ Add [[-arica]] <-ica#34311829>

--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -101,6 +101,7 @@ From {{etyl|sla-pro|sh}} {{term|*-ica|lang=sla-pro}}.
 # {{non-gloss definition|Feminine form of {{term|-ik|lang=sh}}.}}
 
 ====Derived terms====
+* {{l|sh|-arica}}
 * {{l|sh|-čica}}
 
 [[es:-ica]]
