/* Adjective */ {{gloss-stub|es}} <simple#34351871>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -466,7 +466,7 @@ Borrowed from {{etyl|la|fro}} {{term|simplex|lang=la}}.
 
 # {{l|en|simple}}
 # [[mere]], [[uncomplicated]], [[easy]]
-# [[single]]
+# {{gloss-stub|es}} [[single]]
 # [[insipid]]
 
 ====Antonyms====
