t+sw:[[mwanzi]] ([[WT:EDIT|Assisted]]) <bamboo#34369985>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -80,6 +80,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Slovene: {{t+|sl|bambus|m}}
 * Spanish: {{t+|es|bambú|m}}
 * Sundanese: {{t+|su|awi}}
+* Swahili: {{t|sw|mwanzi}}
 * Swedish: {{t+|sv|bambu|c}}
 * Tagalog: {{t|tl|kawayan}}
 * Thai: {{t+|th|ไผ่|tr=pài|sc=Thai}}
