--- a/en/p/prosodic.855423.wikitext
+++ b/en/p/prosodic.855423.wikitext
@@ -18,7 +18,7 @@
 * Italian: {{t-check|it|prosodiaco}}, {{t|it|prosodico}}
 {{trans-mid}}
 * Latin: {{t|la|prosodiacus}}, {{t-check|la|prosodicus}}
-* Portugese: {{t|pt|prosodíaco}}
+* Portuguese: {{t|pt|prosodíaco}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|прозо̀дӣјскӣ|sc=Cyrl}}
 *: Roman: {{t|sh|prozòdījskī}}
