--- a/en/d/dulcimerist.855989.wikitext
+++ b/en/d/dulcimerist.855989.wikitext
@@ -8,4 +8,8 @@
 
 # Someone who plays the [[dulcimer]].
 
+====Derived terms====
+* [[Appalachian dulcimerist]]
+* [[hammered dulcimerist]]
+
 [[Category:en:Musicians]]
