--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -24,18 +24,20 @@
 
 ----
 
-==Mandarin==
-
-===Pronunciation===
-The abbreviation is pronounced emulating English, although the sounds and sound combination don't exist in Mandarin. The individual pronunciation may vary dependent on the speaker's ability to pronounce words in English. <!-- based on discussion with educated Chinese speakers and personal experience, User:Atitarev -->
+==Chinese==
 
 ===Etymology===
 From {{etyl|en|cmn}} {{term|WTO|lang=en}}, {{initialism of|World Trade Organization|cap=i|nocat=1|lang=cmn}}
 
+===Pronunciation===
+* The abbreviation is pronounced emulating English, although the sounds and sound combination don't exist in Mandarin. The individual pronunciation may vary dependent on the speaker's ability to pronounce words in English. <!-- based on discussion with educated Chinese speakers and personal experience, User:Atitarev -->
+
 ===Proper noun===
-{{head|cmn|proper noun|sc=Latn}}
+{{zh-proper noun}}
 
 # [[#English|WTO]]
+
+[[Category:Mandarin proper nouns]]
 
 [[zh-min-nan:WTO]]
 [[cs:WTO]]
