t+it:[[quindi]] ([[WT:EDIT|Assisted]]) <then#34394767>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -142,7 +142,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Ido: {{t+|io|lore}}
 * Irish: {{t|ga|i ndiadh sin}}
 * Istriot: {{t|ist|puoi}}
-* Italian: {{t+|it|poi}}
+* Italian: {{t+|it|poi}}, {{t+|it|quindi}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|そして|tr=soshite}}
 * Khmer: {{t|km|រួចមក|tr=ruəc mɔɔk|sc=Khmr}}, {{t|km|បន្ទាប់មក|tr=bɑntoap mɔɔk|sc=Khmr}}, {{t|km|ក្រោយមក|tr=kraoy mɔɔk|sc=Khmr}}
 * Korean: {{t|ko|나중에|sc=Kore}}, {{t+|ko|이후|sc=Kore}}
