/* Alternative forms */ <tire barrier#34404372>

--- a/en/t/tire barrier.801643.wikitext
+++ b/en/t/tire barrier.801643.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Alternative forms===
-*tyre barrier ([[British English]])
+* {{l|en|tyre barrier}} ([[British English]])
 
 ===Noun===
 {{en-noun}}
