/* English */ category <pace car#34404458>

--- a/en/p/pace car.802773.wikitext
+++ b/en/p/pace car.802773.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 {{en-noun}}
-# A [[car]] that other cars drive behind before a race starts.
+# {{label|en|motor racing}} a [[car]] that other cars drive behind before a race starts.
 
 [[ca:pace car]]
 [[ku:pace car]]
