t+vi:[[hòn đảo]] ([[WT:EDIT|Assisted]]) <island#34406358>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -266,7 +266,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Uyghur: {{t|ug|ئارال|sc=ug-Arab}}
 * Uzbek: {{t|uz|orol}}
 * Venetian: {{t|vec|ixoła|f}}
-* Vietnamese: {{t+|vi|đảo}} ({{t|vi|島}})
+* Vietnamese: {{t+|vi|đảo}} ({{t|vi|島}}), {{t+|vi|hòn đảo}}
 * Volapük: {{t+|vo|nisul}}
 * Walloon: {{t+|wa|iye}}
 * Welsh: {{t+|cy|ynys|f}}
