/* Derived terms */ <division#34416284>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -30,6 +30,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 # {{context|UK|Eton College|lang=en}} A [[lesson]]; a [[class]]. <!--informally "div"-->
 
 ====Derived terms====
+* [[division-viol]]
 * [[divisional]]
 * [[division of labour]]
 * [[data division]]
